k8s-deployments/overlays/staging/verifier-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hs-verifier
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: verifier
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
